# sudoku-vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  classifications.xml  cmake_install.cmake  imageProcessor.cpp  image_processing.cpp  images.xml  main  main.cpp  sudokuSolver.cpp
ocr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  train_test  train_test.cpp
